fixed alot of spacing issues

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -16,15 +16,11 @@
 h2 {
     margin: 0;
     padding: 0;
-    margin-left: 1.2rem;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
 }
 
 h3 {
     margin: 0;
     padding: 0;
-    margin-top: 3rem;
 }
 
 h4 {
